[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "nettool"
version = "0.0.1760866891"
description = "Short explination of what it does _here_"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
dependencies = [
    "asserttool @ git+https://github.com/jakeogh/asserttool",
    "click",
    "click-auto-help @ git+https://github.com/jakeogh/click-auto-help",
    "clicktool @ git+https://github.com/jakeogh/clicktool",
    "eprint @ git+https://github.com/jakeogh/eprint",
    "globalverbose @ git+https://github.com/jakeogh/globalverbose",
    "mptool @ git+https://github.com/jakeogh/mptool",
    "netifaces",
    "requests @ git+https://github.com/jakeogh/requests",
    "retry-on-exception @ git+https://github.com/jakeogh/retry-on-exception",
    "sh",
    "unmp @ git+https://github.com/jakeogh/unmp",
]
requires-python = ">=3.11"

[project.license]
text = "ISC"

[project.urls]
Homepage = "https://github.com/jakeogh/nettool"

[project.scripts]
nettool = "nettool.cli:cli"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
exclude = [
    "tests",
]

[tool.setuptools.package-data]
nettool = [
    "py.typed",
]
