[build-system]
requires = ["setuptools>=61.0", "tomlkit"]
build-backend = "pep508_url_version_backend"
backend-path = ["."]

[project]
name = "nettool"
version = "1!0.0.1761811071"
description = "Short explination of what it does _here_"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
dependencies = []
license = "ISC"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/jakeogh/nettool"

[project.scripts]
nettool = "nettool.cli:cli"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
exclude = [
    "tests",
]

[tool.setuptools.package-data]
nettool = [
    "py.typed",
]

[tool.pep508-url-version-backend]
dependencies-indexed = ["asserttool>=1!0.0.1761250315", "click-auto-help>=0.0.1761041641", "clicktool>=1!0.0.1761810015", "eprint>=1!0.0.1761259337", "globalverbose>=0.0.1761031290", "mptool>=0.0.1761032167", "netifaces", "requests", "retry-on-exception>=0.0.1761194539", "sh", "unmp>=1!0.0.1761810839"]
dependencies-git = [
	"asserttool @ git+https://github.com/jakeogh/asserttool", 
	"click-auto-help @ git+https://github.com/jakeogh/click-auto-help", 
	"clicktool @ git+https://github.com/jakeogh/clicktool", 
	"eprint @ git+https://github.com/jakeogh/eprint", 
	"globalverbose @ git+https://github.com/jakeogh/globalverbose", 
	"mptool @ git+https://github.com/jakeogh/mptool", 
	"netifaces", 
	"requests", 
	"retry-on-exception @ git+https://github.com/jakeogh/retry-on-exception", 
	"sh", 
	"unmp @ git+https://github.com/jakeogh/unmp"]
index-urls = ["jakeogh.github.io", "pip-index"]
